Fix spinner render, wrap concert results

--- a/src/components/UserLocation.css
+++ b/src/components/UserLocation.css
@@ -1,33 +1,60 @@
+.user-input-container {
+  text-align: center;
+  margin-top: 50px;
+}
+#location-question {
+  color: white;
+}
+
+
 #search-form {
-    text-align: center;
+    margin: 0 auto;
     font-size: 24px;
     color: white;
-    margin-top: 100px;
-    position: fixed;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     border-radius: 10px;
-    background: rgba(171, 230, 238, 0.5);  
+
   }
 
-  .spinner {
+  #spinner {
     text-align: center;
-    position: relative;
-    left: 50%;
+    /* position: relative;
+    left: 50%; */
     margin-top: 10px;
   }
 
   .searchButton {
-    position: relative;
     display: block;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-top:20px;
+    margin: 0 auto;
+    margin-top: 40px;
+    background-color: rgb(52, 139, 238);
+    transition-duration: 0.8s;
+    height: 40px;
+    width: 120px;
+    border-radius: 8px;
+    border: 3px solid black;
+    font-size: 16px;
+  }
+
+  .searchButton:hover {
+    background-color: rgb(114, 187, 236);
   }
 
   #search-input {
-    margin: 20px;
+    padding: 5px;
+    text-align: center;
     font-size: 1.3em;
     border-radius: 5px;
   }
+
+  input[type=text], textarea {
+    transition: all 0.3 ease-in-out;
+    outline: none;
+  }
+
+  /* //come back to css for the textarea */
+  /* input[type=text]:focus, textarea:focus {
+    box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+    padding: 3px 0px 3px 3px;
+    margin: 5px 1px 3px 0px;
+    border: 1px solid rgba(81, 203, 238, 1);
+  } */
